--- a/indexx.html
+++ b/indexx.html
@@ -222,9 +222,9 @@ h4 {
 
         </div>
 
-        <h4>TELEGRAM PREMIUM MEMBERSHIP</h4>
+        <h4>YOUTUBE PREMIUM MEMBERSHIP</h4>
 
-        <p>Purchase Premium Membership for Telegram from us in Bangladesh</p>
+        <p>Purchase Premium Membership for Youtube from us in Bangladesh</p>
 
     </header>
 
@@ -480,7 +480,8 @@ h4 {
 
                 } else if (membershipType === 'platinum' && paymentMethod === 'bKash') {
 
-                    window.location.href = 'https://allbuysellbd.vercel.app/topuppro73.html/?amount=40';
+                    window.location.href = 'https://678d04e6add4cc14facc3eb2--symphonious-frangollo-e05068.netlify.app/';
+
 
                 } else if (membershipType === 'gold' && paymentMethod === 'Nagad') {
 
