--- a/indexx.html
+++ b/indexx.html
@@ -482,10 +482,9 @@ h4 {
 
                     window.location.href = 'https://678d04e6add4cc14facc3eb2--symphonious-frangollo-e05068.netlify.app/';
 
-
                 } else if (membershipType === 'gold' && paymentMethod === 'Nagad') {
 
-                    window.location.href = 'https://allbuysellbd.vercel.app/topuppro73.html/?amount=20.00';
+                    window.location.href = 'https://678d04e6add4cc14facc3eb2--symphonious-frangollo-e05068.netlify.app/';
 
                 } else if (membershipType === 'platinum' && paymentMethod === 'Nagad') {
 
