--- a/indexx.html
+++ b/indexx.html
@@ -276,7 +276,7 @@ h4 {
 
         <div class="buy-now">
 
-            <button onclick="buyNow()">YOUTUBE SERVICE PURCHASE</button>
+            <button onclick="buyNow()">SOCIAL SERVICE PURCHASE</button>
 
         </div>
 
@@ -346,7 +346,19 @@ h4 {
 
         <input type="text" id="telegramUsername" placeholder="Enter Youtube Url">
 
+         <input type="text" id="telegramUsername" placeholder="Enter Facebook Url">
+        
         <input type="text" id="activationCode" placeholder="Enter Activation Code">
+
+        <select id="membershipType">
+
+            <option value="gold">3k Follower Facebook </option>
+
+
+            <option value="gold">5k Follower Facebook </option>
+
+            <option value="platinum">5K Follower and 4000 Watchtime</option>
+
 
         <select id="membershipType">
 
